--- a/Firmware/ini/mks_dlc32.ini
+++ b/Firmware/ini/mks_dlc32.ini
@@ -1,14 +1,14 @@
 ################################################################
-# - 	            MKS DLC32 ESP32的默认参数设置
-# - CPU Freq:160MHz         - for I2S calc
+# - 	            MKS DLC32 ESP32 Настройки параметров по умолчанию
+# - CPU Freq:240MHz         - for I2S calc
 # - Flash Freq:80MHz        - for ESP32 Flash speed
 # - Flash Mode: DOUT        - for ESP32 Flash mode
 ################################################################
 [esp32_common]
-platform = espressif32@3.2.0 
+platform = espressif32@^3.2.0
 framework = arduino
 board = esp32dev
-board_build.f_cpu = 160000000L
+board_build.f_cpu = 240000000L
 board_build.f_flash = 80000000L
 board_build.flash_mode = dout
 build_flags = 
@@ -25,7 +25,7 @@ build_src_filter =
 platform = ${esp32_common.platform}
 extends = esp32_common
 board_build.partitions = huge_app.csv
-upload_port = COM8
+upload_port = COM3
 upload_speed = 921600
 build_flags = ${esp32_common.build_flags}
 			-D MACHINE_TYPE_DEFAULT
